# conan-sbom

./: CMakeLists.txt  conanfile.py  sbom.json
.github/workflows/: sbom.yaml
src/: conan-sbom.cpp  conan-sbom.h  main.cpp
test_package/: conanfile.py
